package com.nexusaid.core.entity.enums;

public enum AccountStatus {
    PENDING,
    APPROVED,
    REJECTED,
    SUSPENDED
}
