package com.nexusaid.core.entity.enums;

public enum CommitteeType {
    NATIONAL,
    REGIONAL,
    LOCAL
}
