package com.nexusaid.core.entity.enums;

public enum EducationLevel {
    MOINS_BAC,
    BAC,
    BAC_PLUS_1_2,
    LICENCE,
    MASTER,
    DOCTORAT
}
